Position controller, emit error on empty portDevice
