# src/controllers/positionController.js
@@ -1,4 +1,5 @@
 import SmoothieboardInterface from '../lib/smoothieboardInterface'
+import Socket from '../lib/socket'
 
 export function getPosition(request, response){
 	SmoothieboardInterface.sendCommand('M114.1')
@@ -11,11 +12,25 @@ export function getPosition(request, response){
 
 export function moveToPosition(request, response){
 	let position = request.swagger.params.position.value
-	SmoothieboardInterface.sendCommand(`G0 X${position.x} F3000`)
+	
+	let commandX = (position.x ? `X${position.x}` : '')
+	let commandY = (position.y ? `Y${position.y}` : '')
+	let commandZ = (position.z ? `Z${position.z}` : '')
+	let speed = (position.speed ? `F${position.speed}` : '')
+
+	let command = `G0 ${commandX} ${commandY} ${commandZ} ${speed}`.replace(/\s+/g, ' ')
+
+	if(commandX || commandY || commandZ){
+		SmoothieboardInterface.sendCommand(command)
+	}else{
+		Socket.io.emit('data', 'No axis information was received.')
+	}
+
 	response.send({
 		x : position.x,
 		y : position.y,
-		z : position.z
+		z : position.z,
+		speed : position.speed
 	})
 }
 
